Some progress on lyrics bug. As of now what I have done is said if there is a dfifference between the props and the lyrics on the state, set the state to be equal to the prop lyrics. It is working from one song to another with a flicker but data integrity. Main issue now is thst there seems to be an update when we hit the save button.

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url("/imgs/mario-bg.png") no-repeat;
   background-size:100%;
-  background-position: bottom;
   background-color: #95e8f3;
-  min-height:100%;
 }
 
 html {
